[Offline Pages] Fix several infobar bugs.

* Overwrite button now deletes all page downloads with the same URL before saving the new page
* Folder name is now called "Downloads"
* Folder link now opens "Downloads home"

BUG=653936

Review-Url: https://codereview.chromium.org/2400213003
Cr-Commit-Position: refs/heads/master@{#424569}

Former-commit-id: 6a97d07086a724662167d73893ab9d2ab00605d1