chrome/browser/android/offline_pages/downloads/offline_page_download_bridge.h
@@ -61,7 +61,8 @@ class OfflinePageDownloadBridge : public DownloadUIAdapter::Observer {
   void StartDownload(
       JNIEnv* env,
       const base::android::JavaParamRef<jobject>& obj,
-      const base::android::JavaParamRef<jobject>& j_tab);
+      const base::android::JavaParamRef<jobject>& j_tab,
+      const base::android::JavaParamRef<jstring>& j_downloads_label);
 
   void CancelDownload(JNIEnv* env,
                       const base::android::JavaParamRef<jobject>& obj,
